log
Thu 21 Mar 2024 02:54:22 PM UTC: 
 tests:  0|5
total_score: 0/70
c83c5d7
Thu 21 Mar 2024 08:25:30 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
75d47cc
Thu 21 Mar 2024 08:37:18 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
4c02329
Thu 21 Mar 2024 08:39:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |      suma += elemento;
      |           ^~
cc1: all warnings being treated as errors
Compilation failed
f308def
